<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="Global_Variables_DigitalMapping" Id="{ab4c3de9-4c93-48a8-9a2d-f6374b28d4a1}">
    <Declaration><![CDATA[{attribute 'Tc2GvlVarNames'}
VAR_GLOBAL

(* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx DIGITAL INPUT xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*)
(*========================================================================*)
(*
	X100_00  AT %I* : BOOL; (*GENERAL ALARM PB - RESET (-100S1)*)
	X100_01  AT %I* : BOOL; (*GENERAL BUZZER PB - RESET (-100S2)*)
	X100_02  AT %I* : BOOL; (*GENERAL MAIN PANEL PB - E-STOP (-100S3)*)
	X100_03  AT %I* : BOOL; (*OPERATOR PULL STRING - E-STOP (-100S4)*)
	X100_04  AT %I* : BOOL; (*MAINTENANCE E/STOP PULL STRING (-100S5)*)
	X100_05  AT %I* : BOOL; (*GENERAL PHASE SEQEUNCE RELAY - TRIP (-8K1)*)
	X100_06  AT %I* : BOOL; (*STN 1 PROCESS TANK PUMP TOR - TRIP (-50F2)*)
	X100_07  AT %I* : BOOL; (*STN 2 PROCESS TANK PUMP TOR - TRIP (-51F2)*)
	X100_08  AT %I* : BOOL; (*STN 3 PROCESS TANK PUMP TOR - TRIP (-52F2)*)
	X100_09  AT %I* : BOOL; (*STN 2&3 AGITATION MOTOR TOR - TRIP (-25F2)*)
	X100_10  AT %I* : BOOL; (*STN 5 BLOWER TOR - TRIP (-65F2)*)
	X100_11  AT %I* : BOOL; (*STN 5 VACUUM PUMP TOR - TRIP (-56F2)*)
	X100_12  AT %I* : BOOL; (*RESERVED*)
	X100_13  AT %I* : BOOL; (*RESERVED*)
	X100_14  AT %I* : BOOL; (*RESERVED*)
	X100_15  AT %I* : BOOL; (*RESERVED*)

	X101_00  AT %I* : BOOL; (*STN 1 SLIDING DOOR RS - OPEN (-101S5)*)
	X101_01  AT %I* : BOOL; (*STN 1 SLIDING DOOR RS - CLOSE (-101S6)*)
	X101_02  AT %I* : BOOL; (*ARM 1 HORZ SENSOR - LD SIDE OT  (-101B1)*)
	X101_03  AT %I* : BOOL; (*ARM 1 HORZ SENSOR - HOME (-101B2)*)
	X101_04  AT %I* : BOOL; (*STN 1 SUB PROCESS TANK HEATER THERMOSTAT A - ALARM (-101S8)*)
	X101_05  AT %I* : BOOL; (*STN 1 SUB PROCESS TANK HEATER THERMOSTAT B - ALARM (-101S9)*)
	X101_06  AT %I* : BOOL; (*STN 1 PROCESS TANK SENSOR - MIN LEVEL (-101S1)*)
	X101_07  AT %I* : BOOL; (*STN 1 SUB PROCESS TANK SENSOR - REG LEVEL (-101S2)*)
	X101_08  AT %I* : BOOL; (*STN 1 SUB PROCESS TANK SENSOR - MIN LEVEL (-101S3)*)
	X101_09  AT %I* : BOOL; (*DETERGENT STORAGE TANK SENSOR - MIN LEVEL (-101S4)*)
	X101_10  AT %I* : BOOL; (*STRUCTURE 1 DRIP PAN SENSOR - LEAK (-101B3)*)
	X101_11  AT %I* : BOOL; (*STN 1 SUB PROCESS TANK SENSOR - TOP UP LEVEL (-101S7)*)
	X101_12  AT %I* : BOOL; (*RESERVED*)
	X101_13  AT %I* : BOOL; (*RESERVED*)
	X101_14  AT %I* : BOOL; (*RESERVED*)
	X101_15  AT %I* : BOOL; (*RESERVED*)

	X102_00  AT %I* : BOOL; (*MODULE 1 DOOR MAGNETIC SWITCH FRONT MAINTENANCE TOP - ALARM (-102S1,2,3)*)
	X102_01  AT %I* : BOOL; (*RESERVED*)
	X102_02  AT %I* : BOOL; (*RESERVED*)
	X102_03  AT %I* : BOOL; (*MODULE 1 SLIDING DOOR SENSOR A (-102B7)*)
	X102_04  AT %I* : BOOL; (*MODULE 1 SLIDING DOOR SENSOR B (-102B8)*)
	X102_05  AT %I* : BOOL; (*RESERVED*)
	X102_06  AT %I* : BOOL; (*RESERVED*)
	X102_07  AT %I* : BOOL; (*RESERVED*)
	X102_08  AT %I* : BOOL; (*RESERVED*)
	X102_09  AT %I* : BOOL; (*RESERVED*)
	X102_10  AT %I* : BOOL; (*RESERVED*)
	X102_11  AT %I* : BOOL; (*RESERVED*)
	X102_12  AT %I* : BOOL; (*RESERVED*)
	X102_13  AT %I* : BOOL; (*RESERVED*)
	X102_14  AT %I* : BOOL; (*RESERVED*)
	X102_15  AT %I* : BOOL; (*RESERVED*)

	X110_00  AT %I* : BOOL; (*STN 2 PROCESS TANK SENSOR - MIN LEVEL (-110S1)*)
	X110_01  AT %I* : BOOL; (*STN 2 SUB PROCESS TANK SENSOR - REG LEVEL (-110S2)*)
	X110_02  AT %I* : BOOL; (*STN 2 SUB PROCESS TANK SENSOR - MIN LEVEL (-110S3)*)
	X110_03  AT %I* : BOOL; (*STN 3 PROCESS TANK SENSOR - MIN LEVEL (-110S4)*)
	X110_04  AT %I* : BOOL; (*STN 3 SUB PROCESS TANK SENSOR - REG LEVEL (-110S5)*)
	X110_05  AT %I* : BOOL; (*STN 3 SUB PROCESS TANK SENSOR - MIN LEVEL (-110S6)*)
	X110_06  AT %I* : BOOL; (*ARM 1 VERT SENSOR - TOP SIDE OT (-110B1)*)
	X110_07  AT %I* : BOOL; (*ARM 1 VERT SENSOR - TOP SIDE HOME (-110B2)*)
	X110_08  AT %I* : BOOL; (*ARM 1 VERT SENSOR - BOTTOM SIDE OT (-110B3)*)
	X110_09  AT %I* : BOOL; (*ARM 1 VERT SENSOR - CRASH (-110B4)*)
	X110_10  AT %I* : BOOL; (*ARM 1 SENSOR A - MISSHOOK (-110B5)*)
	X110_11  AT %I* : BOOL; (*ARM 1 SENSOR B - MISSHOOK (-110B6)*)
	X110_12  AT %I* : BOOL; (*RESERVED*)
	X110_13  AT %I* : BOOL; (*RESERVED*)
	X110_14  AT %I* : BOOL; (*RESERVED*)
	X110_15  AT %I* : BOOL; (*RESERVED*)

	X111_00  AT %I* : BOOL; (*STRUCTURE 2 DRIP PAN SENSOR - LEAK (-111B1)*)
	X111_01  AT %I* : BOOL; (*STN 2 SUB PROCESS TANK HEATER THERMOSTAT A - ALARM (-111S1)*)
	X111_02  AT %I* : BOOL; (*STN 2 SUB PROCESS TANK HEATER THERMOSTAT B - ALARM (-111S2)*)
	X111_03  AT %I* : BOOL; (*STN 3 SUB PROCESS TANK HEATER THERMOSTAT A - ALARM (-111S3)*)
	X111_04  AT %I* : BOOL; (*STN 3 SUB PROCESS TANK HEATER THERMOSTAT B - ALARM (-111S4)*)
	X111_05  AT %I* : BOOL; (*MODULE 2 DOOR MAGNETIC SWITCH FRONT MAINTENANCE TOP - ALARM (-111S11,12)*)
	X111_06  AT %I* : BOOL; (*RESERVED*)
	X111_07  AT %I* : BOOL; (*RESERVED*)
	X111_08  AT %I* : BOOL; (*MODULE 2 SLIDING DOOR SENSOR A (-111B2)*)
	X111_09  AT %I* : BOOL; (*MODULE 2 SLIDING DOOR SENSOR B (-111B3)*)
	X111_10  AT %I* : BOOL; (*MODULE 2 SLIDING DOOR SENSOR C (-111B4)*)
	X111_11  AT %I* : BOOL; (*RESERVED*)
	X111_12  AT %I* : BOOL; (*RESERVED*)
	X111_13  AT %I* : BOOL; (*RESERVED*)
	X111_14  AT %I* : BOOL; (*RESERVED*)
	X111_15  AT %I* : BOOL; (*RESERVED*)

	X115_00  AT %I* : BOOL; (*ARM 1 HORZ SENSOR - ULD SIDE OT (-115B1)*)
	X115_01  AT %I* : BOOL; (*ULD CONVEYOR SENSOR - FEED (-115B2)*)
	X115_02  AT %I* : BOOL; (*ULD CONVEYOR SENSOR - PICK (-115B3)*)
	X115_03  AT %I* : BOOL; (*ULD CONVEYOR PB - RAPID (-115S11)*)
	X115_04  AT %I* : BOOL; (*ULD CONVEYOR PB - E-STOP (-115S12)*)
	X115_05  AT %I* : BOOL; (*STN 4 SLIDING DOOR RS - OPEN (-115S1)*)
	X115_06  AT %I* : BOOL; (*STN 4 SLIDING DOOR RS - CLOSE (-115S2)*)
	X115_07  AT %I* : BOOL; (*STN 5 SLIDING DOOR RS - OPEN (-115S3)*)
	X115_08  AT %I* : BOOL; (*STN 5 SLIDING DOOR RS - CLOSE (-115S4)*)
	X115_09  AT %I* : BOOL; (*STN 5 SLIDING DOOR RS_A - CLAMP (-115S5)*)
	X115_10  AT %I* : BOOL; (*STN 5 SLIDING DOOR RS_A - UNCLAMP (-115S6)*)
	X115_11  AT %I* : BOOL; (*STN 5 SLIDING DOOR RS_B - CLAMP (-115S7)*)
	X115_12  AT %I* : BOOL; (*STN 5 SLIDING DOOR RS_B - UNCLAMP (-115S8)*)
	X115_13  AT %I* : BOOL; (*STN 5 PROCESS TANK HEATER THERMOSTAT - ALARM (-115S9)*)
	X115_14  AT %I* : BOOL; (*GENERAL INCOMING FLOW SENSOR - MIN FLOW (-115B4)*)
	X115_15  AT %I* : BOOL; (*RESERVED*)

	X116_00  AT %I* : BOOL; (*MAIN INC HEATER THERMOSTAT A - ALARM (-116S1)*)
	X116_01  AT %I* : BOOL; (*MAIN INC HEATER THERMOSTAT B - ALARM (-116S2)*)
	X116_02  AT %I* : BOOL; (*STN 4 IONIZER ION LEVEL ALARM (-116U1)*)
	X116_03  AT %I* : BOOL; (*STN 4 IONIZER CONDITION ALARM (-116U1)*)
	X116_04  AT %I* : BOOL; (*STN 4 IONIZER ALARM OUTPUT (-116U1)*)
	X116_05  AT %I* : BOOL; (*UNLOADING IONIZER ION LEVEL ALARM (-116U2)*)
	X116_06  AT %I* : BOOL; (*UNLOADING IONIZER CONDITION ALARM (-116U2)*)
	X116_07  AT %I* : BOOL; (*UNLOADING IONIZER ALARM OUTPUT (-116U2)*)
	X116_08  AT %I* : BOOL; (*MODULE 3 DOOR MAGNETIC SWITCH FRONT MAINTENANCE TOP - ALARM (-116S3,4,5,6,7,8,9)*)
	X116_09  AT %I* : BOOL; (*RESERVED*)
	X116_10  AT %I* : BOOL; (*RESERVED*)
	X116_11  AT %I* : BOOL; (*MODULE 3 SLIDING DOOR SENSOR A (-116B1)*)
	X116_12  AT %I* : BOOL; (*MODULE 3 SLIDING DOOR SENSOR B (-116B2)*)
	X116_13  AT %I* : BOOL; (*MODULE 3 SLIDING DOOR SENSOR C (-116B3)*)
	X116_14  AT %I* : BOOL; (*RESERVED*)
	X116_15  AT %I* : BOOL; (*RESERVED*)

	X117_00  AT %I* : BOOL; (*ULD CYLINDER - UP SENSOR A (-117S1)*)
	X117_01  AT %I* : BOOL; (*ULD CYLINDER - DOWN SENSOR A (-117S2)*)
	X117_02  AT %I* : BOOL; (*ULD CYLINDER - UP SENSOR B (-117S3)*)
	X117_03  AT %I* : BOOL; (*ULD CYLINDER - DOWN SENSOR B (-117S4)*)
	X117_04  AT %I* : BOOL; (*ULD CYLINDER - FORWARD SENSOR (-117S5)*)
	X117_05  AT %I* : BOOL; (*ULD CYLINDER - REVERSE SENSOR (-117S6)*)
	X117_06  AT %I* : BOOL; (*STN 4 CDA CYLINDER - IN (-117S7)*)
	X117_07  AT %I* : BOOL; (*STN 4 CDA CYLINDER - OUT (-117S8)*)
	X117_08  AT %I* : BOOL; (*RESERVED*)
	X117_09  AT %I* : BOOL; (*RESERVED*)
	X117_10  AT %I* : BOOL; (*RESERVED*)
	X117_11  AT %I* : BOOL; (*RESERVED*)
	X117_12  AT %I* : BOOL; (*RESERVED*)
	X117_13  AT %I* : BOOL; (*RESERVED*)
	X117_14  AT %I* : BOOL; (*RESERVED*)
	X117_15  AT %I* : BOOL; (*RESERVED*)

	X120_00  AT %I* : BOOL; (*LD CONVEYOR SENSOR - FEED (-120B1)*)
	X120_01  AT %I* : BOOL; (*LD CONVEYOR SENSOR - PICK (-120B2)*)
	X120_02  AT %I* : BOOL; (*LD CONVEYOR PB - RAPID (-120S1)*)
	X120_03  AT %I* : BOOL; (*LD CONVEYOR PB - E-STOP (-120S2)*)
	X120_04  AT %I* : BOOL; (*LD CYLINDER - UP SENSOR A ()*)
	X120_05  AT %I* : BOOL; (*LD CYLINDER - DOWN SENSOR A ()*)
	X120_06  AT %I* : BOOL; (*LD CYLINDER - UP SENSOR B ()*)
	X120_07  AT %I* : BOOL; (*LD CYLINDER - DOWN SENSOR B ()*)
	X120_08  AT %I* : BOOL; (*LD CYLINDER - FORWARD SENSOR ()*)
	X120_09  AT %I* : BOOL; (*LD CYLINDER - REVERSE SENSOR ()*)
	X120_10  AT %I* : BOOL; (*RESERVED*)
	X120_11  AT %I* : BOOL; (*RESERVED*)
	X120_12  AT %I* : BOOL; (*RESERVED*)
	X120_13  AT %I* : BOOL; (*RESERVED*)
	X120_14  AT %I* : BOOL; (*RESERVED*)
	X120_15  AT %I* : BOOL; (*RESERVED*)

(* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx DIGITAL OUTPUT xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*)
(*========================================================================*)

	Y100_00  AT %Q* : BOOL; (*GENERAL ALARM RESET IND (-100S1)*)
	Y100_01  AT %Q* : BOOL; (*GENERAL BUZZER RESET IND (-100S2)*)
	Y100_02  AT %Q* : BOOL; (*GENERAL BUZZER TONE 1 (-150H3)*)
	Y100_03  AT %Q* : BOOL; (*GENERAL BUZZER TONE 2 (-150H3)*)
	Y100_04  AT %Q* : BOOL; (*GENERAL TOWER LIGHT IND - RED (-150H5)*)
	Y100_05  AT %Q* : BOOL; (*GENERAL TOWER LIGHT IND - YELLOW (-150H5)*)
	Y100_06  AT %Q* : BOOL; (*GENERAL TOWER LIGHT IND - GREEN (-150H5)*)
	Y100_07  AT %Q* : BOOL; (*RESERVED*)
	Y100_08  AT %Q* : BOOL; (*RESERVED*)
	Y100_09  AT %Q* : BOOL; (*RESERVED*)
	Y100_10  AT %Q* : BOOL; (*RESERVED*)
	Y100_11  AT %Q* : BOOL; (*RESERVED*)
	Y100_12  AT %Q* : BOOL; (*RESERVED*)
	Y100_13  AT %Q* : BOOL; (*RESERVED*)
	Y100_14  AT %Q* : BOOL; (*RESERVED*)
	Y100_15  AT %Q* : BOOL; (*RESERVED*)

	Y101_00  AT %Q* : BOOL; (*STN 1 PROCESS TANK PUMP ON/OFF (-50K1)*)
	Y101_01  AT %Q* : BOOL; (*STN 2 PROCESS TANK PUMP ON/OFF (-51K1)*)
	Y101_02  AT %Q* : BOOL; (*STN 3 PROCESS TANK PUMP ON/OFF (-52K1)*)
	Y101_03  AT %Q* : BOOL; (*STN 5 VACUUM PUMP ON/OFF (-56K1)*)
	Y101_04  AT %Q* : BOOL; (*STN 2&3 AGITATION MOTOR ON/OFF (-25K1)*)
	Y101_05  AT %Q* : BOOL; (*STN 5 BLOWER ON/OFF (-65K1)*)
	Y101_06  AT %Q* : BOOL; (*STN 1 SUB PROCESS TANK STIRRING MOTOR ON/OFF (-26K1)*)
	Y101_07  AT %Q* : BOOL; (*DETERGENT TANK 1 STIRRING MOTOR ON/OFF (-27K1)*)
	Y101_08  AT %Q* : BOOL; (*STN 1 ULTRASONIC ON/OFF (-16K1)*)
	Y101_09  AT %Q* : BOOL; (*STN 2 ULTRASONIC ON/OFF (-17K1)*)
	Y101_10  AT %Q* : BOOL; (*STN 3 ULTRASONIC ON/OFF (-18K1)*)
	Y101_11  AT %Q* : BOOL; (*STN 1 ELECTRIC ACTUATOR ON/OFF (-21K1)*)
	Y101_12  AT %Q* : BOOL; (*STN 2 ELECTRIC ACTUATOR ON/OFF (-22K1)*)
	Y101_13  AT %Q* : BOOL; (*STN 3 ELECTRIC ACTUATOR ON/OFF (-23K1)*)
	Y101_14  AT %Q* : BOOL; (*RESERVED*)
	Y101_15  AT %Q* : BOOL; (*RESERVED*)

	Y102_00  AT %Q* : BOOL; (*STN 5 PROCESS TANK HEATER A ON/OFF (-70K1)*)
	Y102_01  AT %Q* : BOOL; (*STN 5 PROCESS TANK HEATER B ON/OFF (-71K1)*)
	Y102_02  AT %Q* : BOOL; (*STN 1 SUB PROCESS TANK HEATER ON/OFF (-72K1)*)
	Y102_03  AT %Q* : BOOL; (*STN 2 SUB PROCESS TANK HEATER ON/OFF (-73K1)*)
	Y102_04  AT %Q* : BOOL; (*STN 3 SUB PROCESS TANK HEATER ON/OFF (-74K1)*)
	Y102_05  AT %Q* : BOOL; (*MAIN INC HEATER ON/OFF   (-75K1)*)
	Y102_06  AT %Q* : BOOL; (*STN 1 ULTRASONIC FREQ ON/OFF (-16U1)*)
	Y102_07  AT %Q* : BOOL; (*STN 2 ULTRASONIC FREQ ON/OFF (-17U1)*)
	Y102_08  AT %Q* : BOOL; (*STN 3 ULTRASONIC FREQ ON/OFF (-18U1)*)
	Y102_09  AT %Q* : BOOL; (*RESERVED*)
	Y102_10  AT %Q* : BOOL; (*RESERVED*)
	Y102_11  AT %Q* : BOOL; (*RESERVED*)
	Y102_12  AT %Q* : BOOL; (*RESERVED*)
	Y102_13  AT %Q* : BOOL; (*RESERVED*)
	Y102_14  AT %Q* : BOOL; (*RESERVED*)
	Y102_15  AT %Q* : BOOL; (*RESERVED*)

	Y115_00  AT %Q* : BOOL; (*STN 1 SLIDING DOOR - OPEN (-160Y1)*)
	Y115_01  AT %Q* : BOOL; (*STN 1 SLIDING DOOR - CLOSE (-160Y2)*)
	Y115_02  AT %Q* : BOOL; (*STN 4 SLIDING DOOR - OPEN (-160Y3)*)
	Y115_03  AT %Q* : BOOL; (*STN 4 SLIDING DOOR - CLOSE (-160Y4)*)
	Y115_04  AT %Q* : BOOL; (*STN 5 SLIDING DOOR - OPEN (-160Y5)*)
	Y115_05  AT %Q* : BOOL; (*STN 5 SLIDING DOOR - CLOSE (-160Y6)*)
	Y115_06  AT %Q* : BOOL; (*STN 5 SLIDING DOOR - CLAMP (-160Y7)*)
	Y115_07  AT %Q* : BOOL; (*STN 5 SLIDING DOOR - UNCLAMP (-160Y8)*)
	Y115_08  AT %Q* : BOOL; (*LD CYLINDER - UP (-160Y9)*)
	Y115_09  AT %Q* : BOOL; (*LD CYLINDER - DOWN (-160Y10)*)
	Y115_10  AT %Q* : BOOL; (*LD CYLINDER - FRONT (-160Y11)*)
	Y115_11  AT %Q* : BOOL; (*LD CYLINDER - BACK (-160Y12)*)
	Y115_12  AT %Q* : BOOL; (*ULD CYLINDER - UP (-160Y13)*)
	Y115_13  AT %Q* : BOOL; (*ULD CYLINDER - DOWN (-160Y14)*)
	Y115_14  AT %Q* : BOOL; (*ULD CYLINDER - FRONT (-160Y15)*)
	Y115_15  AT %Q* : BOOL; (*ULD CYLINDER - BACK (-160Y16)*)

	Y116_00  AT %Q* : BOOL; (*GENERAL INCOMING DIW SUPPLY AVINC-1 (-161Y1)*)
	Y116_01  AT %Q* : BOOL; (*STN 1 PROCESS TANK INCOMING DI SUPPLY AV1-1 (-161Y2)*)
	Y116_02  AT %Q* : BOOL; (*STN 1 SUB TANK INCOMING DIW SUPPLY AV1-2 (-161Y3)*)
	Y116_03  AT %Q* : BOOL; (*STN 1 DETERGENT SUPPLY 3-2 WAY AV1-3 (-161Y4)*)
	Y116_04  AT %Q* : BOOL; (*STN 2 PROCESS TANK INCOMING DIW SUPPLY AV2-1 (-161Y5)*)
	Y116_05  AT %Q* : BOOL; (*STN 3 PROCESS TANK INCOMING DIW SUPPLY AV3-1 (-161Y6)*)
	Y116_06  AT %Q* : BOOL; (*STN 4 PROCESS TANK CDA DISCHARGE AV4-1 (-161Y7)*)
	Y116_07  AT %Q* : BOOL; (*STN 4 PROCESS TANK CDA DISCHARGE AV4-2 (-161Y8)*)
	Y116_08  AT %Q* : BOOL; (*STN 5 PROCESS TANK VACUUM SUCTION AV5-1 (-161Y9)*)
	Y116_09  AT %Q* : BOOL; (*STN 5 PROCESS TANK VACUUM RELEASE AV5-2 (-161Y10)*)
	Y116_10  AT %Q* : BOOL; (*STN 5 BLOWER PROTECTION BUTTLEFLY AV5-3 (-161Y11)*)
	Y116_11  AT %Q* : BOOL; (*STN 5 BLOWER PROTECTION BUTTLEFLY AV5-4 (-161Y12)*)
	Y116_12  AT %Q* : BOOL; (*FACILITY CHILL WATER SUPPLY AV5-5 (-161Y13)*)
	Y116_13  AT %Q* : BOOL; (*STN 4 & UNLOADING IONIZER CDA DISCHARGE AVION-1 (-161Y14,15)*)
	Y116_14  AT %Q* : BOOL; (*STN 4 IONIZER STATIC ELIMINATION STOP SIGNAL (-161U1)*)
	Y116_15  AT %Q* : BOOL; (*UNLOADING IONIZER STATIC ELIMINATION STOP SIGNAL (-161U2)*)

	Y117_00  AT %Q* : BOOL; (*STN 4 CDA CYLINDER - IN (-162Y1)*)
	Y117_01  AT %Q* : BOOL; (*STN 4 CDA CYLINDER - OUT (-162Y2)*)
	Y117_02  AT %Q* : BOOL; (*RAMP PUMP AV (-162Y3)*)
	Y117_03  AT %Q* : BOOL; (*RESERVED*)
	Y117_04  AT %Q* : BOOL; (*RESERVED*)
	Y117_05  AT %Q* : BOOL; (*RESERVED*)
	Y117_06  AT %Q* : BOOL; (*RESERVED*)
	Y117_07  AT %Q* : BOOL; (*RESERVED*)
	Y117_08  AT %Q* : BOOL; (*RESERVED*)
	Y117_09  AT %Q* : BOOL; (*RESERVED*)
	Y117_10  AT %Q* : BOOL; (*RESERVED*)
	Y117_11  AT %Q* : BOOL; (*RESERVED*)
	Y117_12  AT %Q* : BOOL; (*RESERVED*)
	Y117_13  AT %Q* : BOOL; (*RESERVED*)
	Y117_14  AT %Q* : BOOL; (*RESERVED*)
	Y117_15  AT %Q* : BOOL; (*RESERVED*)
*)
END_VAR

]]></Declaration>
  </GVL>
</TcPlcObject>